    of full negative value if comparison is false
  o changed SusKey handling, so that it also works in Mono mode (previously
    it was only working in Legato mode)
  o SusKey and Legato flags now accessible in Bassline CFG menu
  o Individual Attack/Decay/Release Curve assignments now accessible in
    Multi/Bassline ENV menu


MEMO:
  - in Bassline mode, CCs could control individual knob parameters for
    left/right channel by using the "current" assignment, and selecting
    the instrument (L-, -R or LR) via different sets of CC

  - a solution has to be found for bassline mode, how values changed
    via knobs should be properly forwarded to the edit patch storage
    for consistent value sets
    As this method has advantages and disadvantages (e.g. destructive
    changes in the edit patch are mostly NOT wanted!), maybe a soft-option
    could be provided (but I'm sure, that most people would disable it
    quickly once they noticed the disadvantages)

  - There is currently a "Notes Off" in the Shift menu which allows to
    turn off all notes of the selected SID(s)
    For more comfort, it could make sense to send this command too all
    SIDs independent from the SID selection
    In addition, a "Note On" (Play) command could also be placed into
    the Shift menu - but where? (maybe as replacement for Init Patch,
    as a patch can also be initialized by changing the engine)

  - drum engine mode: additional parameter for WT table offset?

  - individual copy/paste/clr function for drum instruments?

  - individual save function for instruments (for all engines)

  - selection of bank/patch within same screen in ENS->SID->Bnk/Pat page

  - if multiple SIDs with different engines are connected, the
    performed CS modifications (button/encoder turns) can result into
    a big mess. A fix isn't so easy (easiest but inconsistent solution: the
    master has to remember the engines of SID1..4 in order to decide,