@@ -576,25 +576,26 @@ SID_Vx_RECORD_LEN	EQU	0x18
 
 SID_Vx_ASSIGNED_MV	EQU	0x00
 SID_Vx_STATE		EQU	0x01
-SID_Vx_NOTE		EQU	0x02
-SID_Vx_ARP_NOTE		EQU	0x03
-SID_Vx_PLAYED_NOTE	EQU	0x04
-SID_Vx_TRANSP_NOTE	EQU	0x05
-SID_Vx_OLD_TRANSP_NOTE	EQU	0x06
-SID_Vx_PITCHBENDER	EQU	0x07
-SID_Vx_TARGET_FRQ_L	EQU	0x08
-SID_Vx_TARGET_FRQ_H	EQU	0x09
-SID_Vx_OLD_TARGET_FRQ_L	EQU	0x0a
-SID_Vx_OLD_TARGET_FRQ_H	EQU	0x0b
-SID_Vx_PORTA_FRQ_L	EQU	0x0c
-SID_Vx_PORTA_FRQ_H	EQU	0x0d
-SID_Vx_PORTA_CTR_L	EQU	0x0e
-SID_Vx_PORTA_CTR_H	EQU	0x0f
-SID_Vx_SET_DELAY_CTR_L	EQU	0x10
-SID_Vx_SET_DELAY_CTR_H	EQU	0x11
-SID_Vx_CLR_DELAY_CTR_L	EQU	0x12
-SID_Vx_CLR_DELAY_CTR_H	EQU	0x13
-	;; free offsets: 0x14-0x17 (take care: 0x14 temporary allocated by SID_Vx_D_MODEL_PAR3)
+SID_Vx_STATE2		EQU	0x02
+SID_Vx_NOTE		EQU	0x03
+SID_Vx_ARP_NOTE		EQU	0x04
+SID_Vx_PLAYED_NOTE	EQU	0x05
+SID_Vx_TRANSP_NOTE	EQU	0x06
+SID_Vx_OLD_TRANSP_NOTE	EQU	0x07
+SID_Vx_PITCHBENDER	EQU	0x08
+SID_Vx_TARGET_FRQ_L	EQU	0x09
+SID_Vx_TARGET_FRQ_H	EQU	0x0a
+SID_Vx_OLD_TARGET_FRQ_L	EQU	0x0b
+SID_Vx_OLD_TARGET_FRQ_H	EQU	0x0c
+SID_Vx_PORTA_FRQ_L	EQU	0x0d
+SID_Vx_PORTA_FRQ_H	EQU	0x0e
+SID_Vx_PORTA_CTR_L	EQU	0x0f
+SID_Vx_PORTA_CTR_H	EQU	0x10
+SID_Vx_SET_DELAY_CTR_L	EQU	0x11
+SID_Vx_SET_DELAY_CTR_H	EQU	0x12
+SID_Vx_CLR_DELAY_CTR_L	EQU	0x13
+SID_Vx_CLR_DELAY_CTR_H	EQU	0x14
+	;; free offsets: 0x15-0x17 (take care: 0x14 temporary allocated by SID_Vx_D_MODEL_PAR3)
 
 	;; drum engine uses some of these registers on a different way
 SID_Vx_DRUM		EQU	SID_Vx_NOTE		; drum number
@@ -608,7 +609,7 @@ SID_Vx_D_MODEL_PULSEWIDTH EQU	SID_Vx_OLD_TARGET_FRQ_H
 SID_Vx_D_MODEL_WT_SPEED EQU	SID_Vx_ARP_NOTE
 SID_Vx_D_MODEL_WT_END	EQU	SID_Vx_TRANSP_NOTE
 SID_Vx_D_MODEL_WT_LOOP	EQU	SID_Vx_OLD_TRANSP_NOTE
-SID_Vx_D_MODEL_PAR3	EQU	0x14; temporary in voice array
+SID_Vx_D_MODEL_PAR3	EQU	0x15; temporary in voice array
 
 
 SIDL_V1_BASE		EQU	0x200;..0x217
@@ -909,8 +910,8 @@ SID_Ix_L_TRG_L4P_BASE	EQU	0x155;..0x157	LFO4 Period
 SID_Ix_L_TRG_L5P_BASE	EQU	0x158;..0x15a	LFO5 Period
 SID_Ix_L_TRG_L6P_BASE	EQU	0x15b;..0x15d	LFO6 Period
 SID_Ix_L_TRG_Clk_BASE	EQU	0x15e;..0x160	Clock
-SID_Ix_L_TRG_Cl4_BASE	EQU	0x161;..0x163	Clock/4
-SID_Ix_L_TRG_C16_BASE	EQU	0x164;..0x166	Clock/16
+SID_Ix_L_TRG_Cl6_BASE	EQU	0x161;..0x163	Clock/6
+SID_Ix_L_TRG_C24_BASE	EQU	0x164;..0x166	Clock/24
 SID_Ix_L_TRG_MSt_BASE	EQU	0x167;..0x169	MIDI Clock Start
 
 ;; free: 0x6a-0x6b
